# BirdStamp

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: cursor-rules.mdc
birdstamp/: cli.py  config.py  constants.py  models.py  naming.py  template_loader.py  video_export.py
birdstamp/gui/: __init__.py  editor.py  editor_core.py  editor_crop_calculator.py  editor_exporter.py  editor_options.py  editor_photo_list.py  editor_preview_canvas.py  editor_renderer.py  editor_template.py  editor_template_dialog.py  editor_utils.py  template_context.py
birdstamp/gui/resources/: default_template.json  editor_options.json
birdstamp/meta/: exiftool.py  normalize.py  pillow_fallback.py
birdstamp/render/: __init__.py  banner.py  image_modes.py  typography.py
birdstamp/templates/: __init__.py  compact.yaml  dark.yaml  default.yaml  minimal.yaml
config/: birdstamp.cfg  editor_options.json
config/templates/: default.json  横版(16_9).json  横版(9_16).json  竖版(9_16).json
icons/: app_icon.icns
scripts_dev/: AI_CODING_RULES.md  build_app_icon.py  build_mac.sh  build_win.bat  pyi_rthook_cwd.py  test_render.sh
tests/: test_render_size.py  test_report_db_discovery.py  test_template_loader.py  test_template_overlay_banner_gradient.py  test_video_export.py
